SequencedEntity